# meshlite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/shaders/: mesh.frag  mesh.vert
src/meshlite/: __init__.py  app.py
src/meshlite/app_state/: __init__.py  command_bus.py  document.py  events.py  history.py  node.py  preferences.py  selection_model.py  task_runner.py  transform.py
src/meshlite/domain/: __init__.py  mesh_data.py  mesh_info.py  mesh_io.py  mrm_shim.py
src/meshlite/ops/: __init__.py  _manifest.py  base.py  registry.py
src/meshlite/ops/_dev/: counter_op.py
src/meshlite/ops/boolean/: boolean_op.py
src/meshlite/ops/inspect/: find_self_intersections.py
src/meshlite/ops/io/: load_mesh.py  save_mesh.py
src/meshlite/ops/repair/: auto_repair.py  fill_holes.py  remove_duplicates.py
src/meshlite/ops/simplify/: decimate.py  remesh.py  subdivide.py
src/meshlite/ops/smooth/: laplacian.py
src/meshlite/ops/transform/: mirror.py  rotate.py  scale.py  translate.py
src/meshlite/render/: __init__.py  axes.py  camera.py  gpu_mesh.py  gpu_upload.py  renderer.py  shader_loader.py
src/meshlite/ui/: fonts.py  icons.py  runner.py  theme.py
src/meshlite/ui/panels/: activity_bar.py  base_panel.py  properties.py  sidebar.py  sidebar_operations.py  sidebar_outliner.py  sidebar_search.py  sidebar_settings.py  status_bar.py  top_toolbar.py  viewport.py
src/meshlite/ui/panels/bottom/: console.py  mesh_info.py
src/meshlite/ui/widgets/: command_palette.py  info_cache.py  param_widgets.py
src/meshlite/utils/: async_task.py  file_dialog.py  fuzzy.py  paths.py
tests/: conftest.py  test_architecture.py  test_command_bus.py  test_fill_holes.py  test_gpu_upload.py  test_load_save_ops.py  test_mesh_info.py  test_mesh_io.py  test_ops_repair.py  test_ops_simplify.py  test_ops_transform.py  test_preferences.py  test_registry.py  test_shader_loader.py  test_undo.py
tests/fixtures/: cube.stl  open_cylinder.stl
