[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshlite"
version = "0.2.0"
description = "VSCode-style 3D mesh processing desktop app, powered by MeshLib + ImGui."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Syed Jameel" }]
keywords = ["mesh", "3d", "viewer", "meshlib", "imgui", "moderngl", "stl", "obj", "ply", "mesh-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "meshlib>=3.0.0",
    "imgui-bundle>=1.6.3,<2.0.0",
    "moderngl>=5.12.0,<6.0.0",
    "numpy>=2.0.0,<3.0.0",
    "pyglm>=2.8.2,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/syedjameel/meshlite"
Repository = "https://github.com/syedjameel/meshlite"
Issues = "https://github.com/syedjameel/meshlite/issues"
Changelog = "https://github.com/syedjameel/meshlite/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
meshlite = "meshlite.app:main"

[project.gui-scripts]
meshlite-gui = "meshlite.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meshlite"]

[tool.hatch.build.targets.wheel.shared-data]
"assets/fonts" = "share/meshlite/fonts"
"assets/shaders" = "share/meshlite/shaders"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "assets/",
    "tests/",
    "main.py",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "ROADMAP.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter, not linter

[tool.ruff.lint.isort]
known-first-party = ["meshlite"]
